--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import "./styles/components.css";
 @import "./styles/layout.css";
 @import "./styles/views/dashboard.css";
+@import "./styles/views/content-types.css";
+@import "./styles/views/analytics.css";
 @import "./styles/views/leads.css";
 @import "./styles/views/journey.css";
 @import "./styles/views/timeline.css";
