--- a/src/styles/views/library.css
+++ b/src/styles/views/library.css
@@ -106,7 +106,7 @@
   }
 
   .flow-component-icon.content {
-    @apply bg-[#2358A1]/10 text-[#2358A1]; /* SWK Blue */
+    @apply bg-swk-blue/10 text-swk-blue; /* SWK Blue */
   }
 
   .flow-component-icon.form {
@@ -491,4 +491,3 @@
     @apply absolute top-4 left-4 z-10;
   }
 }
-
